Upgraded to .net 5.0;

--- a/VacationRental.Api/Properties/launchSettings.json
+++ b/VacationRental.Api/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "sslPort": 0
     },
     "iisExpress": {
-      "applicationUrl": "http://localhost:58783",
+      "applicationUrl": "http://localhost:58784",
       "sslPort": 0
     }
   },
@@ -16,7 +16,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
