introduced Synchronization logic;

--- a/VacationRental.Api/appsettings.json
+++ b/VacationRental.Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "Synchronization_Settings": {
+    "LockMaxRetryCount": 3
+  },
   "AllowedHosts": "*"
 }
